--- a/FaceAnalysis/FaceAnalysis.csproj
+++ b/FaceAnalysis/FaceAnalysis.csproj
@@ -117,7 +117,7 @@
     <Content Include="Assets\storelogo-sdk.png" />
     <Content Include="Assets\tile-sdk.png" />
     <Content Include="Assets\windows-sdk.png" />
-    <Content Include="glasses.png" />
+    <Content Include="filter\glasses.png" />
     <Content Include="Properties\Default.rd.xml" />
   </ItemGroup>
   <ItemGroup>
@@ -139,7 +139,6 @@
     <None Include="FaceAnalysis_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="filter\" />
     <Folder Include="Styles\" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
