--- a/FaceAnalysis/FaceAnalysis.csproj
+++ b/FaceAnalysis/FaceAnalysis.csproj
@@ -117,6 +117,7 @@
     <Content Include="Assets\storelogo-sdk.png" />
     <Content Include="Assets\tile-sdk.png" />
     <Content Include="Assets\windows-sdk.png" />
+    <Content Include="Bundle.Mapping.txt" />
     <Content Include="Properties\Default.rd.xml" />
   </ItemGroup>
   <ItemGroup>
@@ -139,6 +140,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="FaceAnalysis_TemporaryKey.pfx" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
