--- a/FaceAnalysis/FilterOptionalPackage/FilterOptionalPackage.vcxproj
+++ b/FaceAnalysis/FilterOptionalPackage/FilterOptionalPackage.vcxproj
@@ -170,6 +170,7 @@
     <Image Include="Assets\StoreLogo.png" />
     <Image Include="Assets\Wide310x150Logo.scale-200.png" />
     <Image Include="Content\glasses.png" />
+    <Image Include="Content\moustache.png" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="App.xaml.cpp">
