--- a/FaceAnalysis/FaceAnalysis.csproj
+++ b/FaceAnalysis/FaceAnalysis.csproj
@@ -107,7 +107,9 @@
     </AppxManifest>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\glasses.png" />
     <Content Include="Assets\microsoft-sdk.png" />
+    <Content Include="Assets\moustache.png" />
     <Content Include="Assets\placeholder-sdk.png" />
     <Content Include="Assets\placeholder.png" />
     <Content Include="Assets\smalltile-sdk.png" />
