--- a/FaceAnalysis/AgeOptionalPackage/AgeOptionalPackage.vcxproj
+++ b/FaceAnalysis/AgeOptionalPackage/AgeOptionalPackage.vcxproj
@@ -103,7 +103,8 @@
     <PackageCertificateThumbprint>70B59B1DBE4A563DC59A4097A3AB1419E2E12C0B</PackageCertificateThumbprint>
     <AppxAutoIncrementPackageRevision>False</AppxAutoIncrementPackageRevision>
     <AppxBundle>Always</AppxBundle>
-    <AppxBundlePlatforms>x86|x64|arm</AppxBundlePlatforms>
+    <AppxBundlePlatforms>x86</AppxBundlePlatforms>
+    <AppxSymbolPackageEnabled>False</AppxSymbolPackageEnabled>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">
     <ClCompile>
