--- a/FaceAnalysis/FaceAnalysis.csproj
+++ b/FaceAnalysis/FaceAnalysis.csproj
@@ -19,6 +19,10 @@
     <WindowsXamlEnableOverview>true</WindowsXamlEnableOverview>
     <PackageCertificateKeyFile>FaceAnalysis_TemporaryKey.pfx</PackageCertificateKeyFile>
     <PackageCertificateThumbprint>70B59B1DBE4A563DC59A4097A3AB1419E2E12C0B</PackageCertificateThumbprint>
+    <AppxAutoIncrementPackageRevision>False</AppxAutoIncrementPackageRevision>
+    <AppxSymbolPackageEnabled>False</AppxSymbolPackageEnabled>
+    <AppxBundle>Always</AppxBundle>
+    <AppxBundlePlatforms>x86</AppxBundlePlatforms>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <DebugSymbols>true</DebugSymbols>
@@ -107,6 +111,7 @@
     </AppxManifest>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\Background.png" />
     <Content Include="Assets\glasses.png" />
     <Content Include="Assets\microsoft-sdk.png" />
     <Content Include="Assets\moustache.png" />
@@ -117,6 +122,7 @@
     <Content Include="Assets\Square310x310Logo.png" />
     <Content Include="Assets\squaretile-sdk.png" />
     <Content Include="Assets\storelogo-sdk.png" />
+    <Content Include="Assets\StoreLogo.png" />
     <Content Include="Assets\tile-sdk.png" />
     <Content Include="Assets\windows-sdk.png" />
     <Content Include="Bundle.Mapping.txt" />
